feat: use add auth, profile and user by rtk query

--- a/src/app/localization/resources/en.json
+++ b/src/app/localization/resources/en.json
@@ -126,6 +126,18 @@
         "label": "Sign Out"
       }
     },
+    "AuthByQuery": {
+      "label": "Authorization by RTK Query",
+      "SignIn": {
+        "label": "Sign In"
+      },
+      "SignUp": {
+        "label": "Sign Up"
+      },
+      "SignOut": {
+        "label": "Sign Out"
+      }
+    },
     "Catalog": {
       "label": "Catalog"
     },
