--- a/src/app/localization/resources/ru.json
+++ b/src/app/localization/resources/ru.json
@@ -126,6 +126,18 @@
         "label": "Выход"
       }
     },
+    "AuthByQuery": {
+      "label": "Авторизация через RTK Query",
+      "SignIn": {
+        "label": "Вход"
+      },
+      "SignUp": {
+        "label": "Регистрация"
+      },
+      "SignOut": {
+        "label": "Выход"
+      }
+    },
     "Catalog": {
       "label": "Каталог"
     },
