refactor: menu items structure and placement

--- a/src/app/localization/resources/en.json
+++ b/src/app/localization/resources/en.json
@@ -146,6 +146,9 @@
     },
     "Products": {
       "label": "Products"
+    },
+    "Home": {
+      "label": "Home"
     }
   },
   "ErrorCode": {
