--- a/src/app/localization/resources/ru.json
+++ b/src/app/localization/resources/ru.json
@@ -146,6 +146,9 @@
     },
     "Products": {
       "label": "Товары"
+    },
+    "Home": {
+      "label": "Главная"
     }
   },
   "ErrorCode": {
