feat: modify products for react toolkit and thunks

--- a/src/app/localization/resources/en.json
+++ b/src/app/localization/resources/en.json
@@ -145,8 +145,11 @@
     "Cart": {
       "label": "Cart"
     },
-    "Products": {
-      "label": "Products"
+    "Edit": {
+      "label": "Edit",
+      "Products": {
+        "label": "Products"
+      }
     },
     "Home": {
       "label": "Home"
