feat: add categories

--- a/src/app/localization/resources/en.json
+++ b/src/app/localization/resources/en.json
@@ -1,5 +1,7 @@
 {
-  "category": {},
+  "category": {
+    "photo_alt": "Категория {{name}}"
+  },
   "operation": {
     "amount": "{{amount, currency}}",
     "description_undefined": "undefined"
@@ -104,7 +106,24 @@
       "photosInvalid": "Each URL must be valid",
       "priceRequired": "Price is required",
       "priceMin": "Price must be at least 0",
-      "categoryRequired": "Category is required"
+      "categoryRequired": "Category is required",
+      "uploadError": "Failed to upload file. Try again."
+    },
+    "button": "Save"
+  },
+  "CategoryEdit": {
+    "name": "Name",
+    "namePlaceholder": "Enter name",
+    "photos": "Photos",
+    "photo": "Photo",
+    "photoPlaceholder": "Enter photo URL",
+    "addPhoto": "Add photo",
+    "errors": {
+      "nameRequired": "Name is required",
+      "photosRequired": "Photo is required",
+      "photosInvalid": "Each URL must be valid",
+      "priceRequired": "Price is required",
+      "uploadError": "Failed to upload file. Try again."
     },
     "button": "Save"
   },
@@ -149,6 +168,9 @@
       "label": "Edit",
       "Products": {
         "label": "Products"
+      },
+      "Categories": {
+        "label": "Categories"
       }
     },
     "Home": {
