--- a/src/app/localization/resources/ru.json
+++ b/src/app/localization/resources/ru.json
@@ -184,7 +184,7 @@
     "ERR_INVALID_PASSWORD": "Пароль не соответствует требованиям безопасности."
   },
   "CommonError": {
-    "UnexspectedError": "Неожиданная ошибка. Пожалуйста, повторите попытку."
+    "UnexpectedError": "Неожиданная ошибка. Пожалуйста, повторите попытку."
   },
   "CartScreen": {
     "cart": "Корзина",
