--- a/src/app/localization/resources/en.json
+++ b/src/app/localization/resources/en.json
@@ -175,6 +175,9 @@
     },
     "Home": {
       "label": "Home"
+    },
+    "UserOrders": {
+      "label": "Orders"
     }
   },
   "ErrorCode": {
@@ -194,5 +197,15 @@
     "total": "{{total, currency}}",
     "clear": "Clear",
     "checkoutButton": "Checkout"
+  },
+  "OrderItem": {
+    "createdAt": "Created at: {{createdAt, date}}",
+    "updatedAt": "Updated at: {{updatedAt, date}}",
+    "status": "Status: {{status}}",
+    "totalPrice": "Total Price: {{totalPrice, currency}}"
+  },
+  "OrderProductItem": {
+    "price": "Price: {{price, currency}}",
+    "quantity": "Quantity: {{quantity}}"
   }
 }
