--- a/src/app/localization/resources/ru.json
+++ b/src/app/localization/resources/ru.json
@@ -175,6 +175,9 @@
     },
     "Home": {
       "label": "Главная"
+    },
+    "UserOrders": {
+      "label": "Заказы"
     }
   },
   "ErrorCode": {
@@ -194,5 +197,15 @@
     "total": "{{total, currency}}",
     "clear": "Очистить",
     "checkoutButton": "Оформить заказ"
+  },
+  "OrderItem": {
+    "createdAt": "Создан: {{createdAt, date}}",
+    "updatedAt": "Обновлен: {{updatedAt, date}}",
+    "status": "Статус: {{status}}",
+    "totalPrice": "Общая стоимость: {{totalPrice, currency}}"
+  },
+  "OrderProductItem": {
+    "price": "Цена: {{price, currency}}",
+    "quantity": "Количество: {{quantity}}"
   }
 }
